--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -350,6 +350,19 @@
         <item name="android:background">@color/grey</item>
         <item name="android:paddingLeft">@dimen/d12</item>
         <item name="android:paddingRight">@dimen/d12</item>
-    </style>    <!--TV end-->
+    </style>
+
+    <style name="tv_button_style" parent="Base.Widget.AppCompat.Button.Borderless">
+        <item name="android:background">@drawable/tv_bcaas_button_selector</item>
+        <item name="android:layout_height">@dimen/d48</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginLeft">@dimen/d10</item>
+        <item name="android:layout_marginRight">@dimen/d10</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">@dimen/text_size_20</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!--TV end-->
 
 </resources>
