地址、私钥输入框不能输入中文

--- a/app/src/main/res/layout/activity_create_wallet.xml
+++ b/app/src/main/res/layout/activity_create_wallet.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="@dimen/d60"
         android:orientation="vertical">
 
-        <io.bcaas.view.PasswordEditText
+        <io.bcaas.view.edittext.PasswordEditText
             android:id="@+id/pketPwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
             bcaas:hint="@string/password_rule_of_length"
             bcaas:title="@string/password" />
 
-        <io.bcaas.view.PasswordEditText
+        <io.bcaas.view.edittext.PasswordEditText
             android:id="@+id/pketConfirmPwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
