--- a/app/src/main/res/layout/activity_insert_address.xml
+++ b/app/src/main/res/layout/activity_insert_address.xml
@@ -50,6 +50,7 @@
                 android:id="@+id/et_address"
                 style="@style/black30_14_edit_text_style"
                 android:layout_marginBottom="@dimen/d20"
+                android:digits="@string/private_format"
                 android:layout_toLeftOf="@+id/ib_scan"
                 android:hint="@string/please_enter_receive_account" />
 
