--- a/app/src/main/res/layout/activity_modify_authorized_presentatives.xml
+++ b/app/src/main/res/layout/activity_modify_authorized_presentatives.xml
@@ -58,6 +58,7 @@
             <EditText
                 android:id="@+id/et_input_representatives"
                 style="@style/black30_14_edit_text_style"
+                android:digits="@string/private_format"
                 android:layout_toLeftOf="@+id/ib_scan_representative"
                 android:hint="@string/enter_address_of_the_authorized" />
 
