--- a/app/src/main/res/drawable/tv_bcaas_button_f.xml
+++ b/app/src/main/res/drawable/tv_bcaas_button_f.xml
@@ -4,7 +4,9 @@
 
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="@dimen/d6" />
-
+    <stroke
+        android:width="@dimen/d1"
+        android:color="@color/white" />
 
     <gradient
         android:angle="180"
