--- a/app/src/main/res/layout/include_edit_text_password.xml
+++ b/app/src/main/res/layout/include_edit_text_password.xml
@@ -27,7 +27,7 @@
             android:singleLine="true" />
 
         <CheckBox
-            android:id="@+id/cbPwd"
+            android:id="@+id/cb_pwd"
             android:layout_width="@dimen/d25"
             android:layout_height="@dimen/d25"
             android:layout_alignParentRight="true"
