--- a/app/src/main/res/layout-land/tv_activity_send.xml
+++ b/app/src/main/res/layout-land/tv_activity_send.xml
@@ -1,115 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/tv_layout_bg"
-    android:orientation="vertical">
+<io.bcaas.view.tv.MainUpLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/block_base_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
 
-    <include layout="@layout/tv_include_header" />
+    <io.bcaas.view.tv.FlyBroadLayout
+        android:id="@+id/block_base_mainup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@mipmap/tv_block_select"
+        android:visibility="gone" />
 
     <LinearLayout
-        style="@style/tv_layout_style"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/d24"
-        android:gravity="center"
-        android:orientation="horizontal">
+        style="@style/tv_layout_bg"
+        android:orientation="vertical">
+
+        <include layout="@layout/tv_include_header" />
 
         <LinearLayout
-            android:layout_width="@dimen/d0"
+            style="@style/tv_layout_style"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center|right"
             android:layout_marginTop="@dimen/d24"
-            android:layout_weight="1"
-            android:background="@color/grey"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/my_account"
-                android:textColor="@color/red_da261f" />
+            <LinearLayout
+                android:layout_width="@dimen/d0"
+                android:layout_height="match_parent"
+                android:layout_gravity="center|right"
+                android:layout_marginTop="@dimen/d24"
+                android:layout_weight="1"
+                android:background="@color/grey"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <include layout="@layout/tv_include_account_info" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/my_account"
+                    android:textColor="@color/red_da261f" />
+
+                <include layout="@layout/tv_include_account_info" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="@dimen/d0"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/d20"
+                android:layout_marginTop="@dimen/d24"
+                android:layout_weight="1"
+                android:background="@color/grey"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/receive_account"
+                    android:textColor="@color/red_da261f" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/account_address"
+                    android:textColor="@color/red_da261f" />
+
+                <EditText
+                    android:id="@+id/et_input_destination_address"
+                    style="@style/black_14_edit_text_style"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginBottom="@dimen/d16"
+                    android:layout_marginTop="@dimen/d16"
+                    android:layout_toLeftOf="@+id/ib_scan_address"
+                    android:background="@color/transparent"
+                    android:cursorVisible="true"
+                    android:hint="@string/please_enter_receive_account"
+                    android:inputType="textMultiLine"
+                    android:lineSpacingExtra="@dimen/d3"
+                    android:maxLines="2"
+                    android:textColorHint="@color/black30_1d2124"
+                    android:textCursorDrawable="@drawable/edit_text_cursor_drawable" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/transaction_amount"
+                    android:textColor="@color/red_da261f" />
+
+                <EditText
+                    android:id="@+id/et_transaction_amount"
+                    style="@style/black_14_single_edit_text_style"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_transaction_amount_key"
+                    android:layout_centerVertical="true"
+                    android:layout_marginBottom="@dimen/d16"
+                    android:layout_marginTop="@dimen/d16"
+                    android:layout_toLeftOf="@+id/ib_scan_address"
+                    android:background="@color/transparent"
+                    android:cursorVisible="true"
+                    android:hint="@string/please_enter_transaction_amount"
+                    android:inputType="number"
+                    android:maxLength="10"
+                    android:singleLine="true"
+                    android:textColor="@color/orange_yellow"
+                    android:textSize="@dimen/text_size_18" />
+
+                <Button
+                    android:id="@+id/btn_send"
+                    style="@style/tv_button_style"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/d10"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:text="@string/send"
+                    android:textColor="@color/red_da261f" />
+
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="@dimen/d0"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/d20"
-            android:layout_marginTop="@dimen/d24"
-            android:layout_weight="1"
-            android:background="@color/grey"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/receive_account"
-                android:textColor="@color/red_da261f" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/account_address"
-                android:textColor="@color/red_da261f" />
-
-            <EditText
-                android:id="@+id/et_input_destination_address"
-                style="@style/black_14_edit_text_style"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginBottom="@dimen/d16"
-                android:layout_marginTop="@dimen/d16"
-                android:layout_toLeftOf="@+id/ib_scan_address"
-                android:background="@color/transparent"
-                android:cursorVisible="true"
-                android:hint="@string/please_enter_receive_account"
-                android:inputType="textMultiLine"
-                android:lineSpacingExtra="@dimen/d3"
-                android:maxLines="2"
-                android:textColorHint="@color/black30_1d2124"
-                android:textCursorDrawable="@drawable/edit_text_cursor_drawable" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/transaction_amount"
-                android:textColor="@color/red_da261f" />
-
-            <EditText
-                android:id="@+id/et_transaction_amount"
-                style="@style/black_14_single_edit_text_style"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_transaction_amount_key"
-                android:layout_centerVertical="true"
-                android:layout_marginBottom="@dimen/d16"
-                android:layout_marginTop="@dimen/d16"
-                android:layout_toLeftOf="@+id/ib_scan_address"
-                android:background="@color/transparent"
-                android:cursorVisible="true"
-                android:hint="@string/please_enter_transaction_amount"
-                android:inputType="number"
-                android:maxLength="10"
-                android:singleLine="true"
-                android:textColor="@color/orange_yellow"
-                android:textSize="@dimen/text_size_18" />
-
-            <Button
-                android:id="@+id/btn_send"
-                style="@style/tv_button_style"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/d10"
-                android:clickable="true"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:text="@string/send"
-                android:textColor="@color/red_da261f" />
-
-        </LinearLayout>
     </LinearLayout>
-
-</LinearLayout>
+</io.bcaas.view.tv.MainUpLayout>
