--- a/app/src/main/res/layout-land/tv_activity_home.xml
+++ b/app/src/main/res/layout-land/tv_activity_home.xml
@@ -1,103 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<io.bcaas.view.tv.MainUpLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/tv_layout_bg"
-    android:orientation="vertical">
+    android:id="@+id/block_base_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
 
-    <include layout="@layout/tv_include_header" />
+    <io.bcaas.view.tv.FlyBroadLayout
+        android:id="@+id/block_base_mainup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@mipmap/tv_block_select"
+        android:visibility="gone" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/d24"
-        android:orientation="horizontal">
+        style="@style/tv_layout_bg"
+        android:orientation="vertical">
+        <include layout="@layout/tv_include_header" />
 
         <LinearLayout
-            android:layout_width="@dimen/d0"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_marginTop="@dimen/d24"
+            android:orientation="horizontal">
 
             <LinearLayout
-                style="@style/tv_layout_style"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/d0"
+                android:layout_width="@dimen/d0"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <include layout="@layout/tv_include_account_info" />
+                <LinearLayout
+                    style="@style/tv_layout_style"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/d0"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
+                    <include layout="@layout/tv_include_account_info" />
+
+                </LinearLayout>
+
+                <TextView
+                    style="@style/white_24_text_style"
+                    android:layout_marginTop="@dimen/d16"
+                    android:text="@string/my_account" />
             </LinearLayout>
 
-            <TextView
-                style="@style/white_24_text_style"
-                android:layout_marginTop="@dimen/d16"
-                android:text="@string/my_account" />
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="@dimen/d0"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/d162"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="@dimen/d0"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/d162"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                style="@style/tv_layout_style"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/d0"
-                android:layout_weight="1">
-
-                <ImageView
-                    android:id="@+id/iv_no_record"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_marginTop="@dimen/d20"
-                    android:src="@mipmap/img_no_data"
-                    android:visibility="invisible" />
-
-                <TextView
-                    android:id="@+id/tv_no_transaction_record"
-                    style="@style/black30_14_text_style"
-                    android:layout_below="@+id/iv_no_record"
-                    android:layout_centerHorizontal="true"
-                    android:text="@string/no_transaction_records"
-                    android:visibility="invisible" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_account_transaction_record"
+                <RelativeLayout
+                    style="@style/tv_layout_style"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_above="@+id/tv_loading_more"
-                    android:scrollbars="none"
-                    tools:listitem="@layout/item_transaction" />
+                    android:layout_height="@dimen/d0"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/iv_no_record"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="@dimen/d20"
+                        android:src="@mipmap/img_no_data"
+                        android:visibility="invisible" />
+
+                    <TextView
+                        android:id="@+id/tv_no_transaction_record"
+                        style="@style/black30_14_text_style"
+                        android:layout_below="@+id/iv_no_record"
+                        android:layout_centerHorizontal="true"
+                        android:text="@string/no_transaction_records"
+                        android:visibility="invisible" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/rv_account_transaction_record"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_above="@+id/tv_loading_more"
+                        android:scrollbars="none"
+                        tools:listitem="@layout/item_transaction" />
+
+                    <TextView
+                        android:id="@+id/tv_loading_more"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/d30"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="@dimen/d5"
+                        android:background="@drawable/tv_button_selector"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:gravity="center"
+                        android:text="@string/show_more"
+                        android:textColor="@color/white"
+                        android:visibility="visible" />
+
+                </RelativeLayout>
 
                 <TextView
-                    android:id="@+id/tv_loading_more"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/d30"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="@dimen/d5"
-                    android:background="@drawable/tv_button_selector"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:gravity="center"
-                    android:text="@string/show_more"
-                    android:textColor="@color/white"
-                    android:visibility="visible" />
-
-            </RelativeLayout>
-
-            <TextView
-                style="@style/white_24_text_style"
-                android:layout_marginTop="@dimen/d16"
-                android:text="@string/transaction_records" />
+                    style="@style/white_24_text_style"
+                    android:layout_marginTop="@dimen/d16"
+                    android:text="@string/transaction_records" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</io.bcaas.view.tv.MainUpLayout>
