--- a/app/src/main/res/layout-land/tv_activity_setting.xml
+++ b/app/src/main/res/layout-land/tv_activity_setting.xml
@@ -1,144 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/tv_layout_bg"
-    android:orientation="vertical">
 
-    <include layout="@layout/tv_include_header" />
+<io.bcaas.view.tv.MainUpLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/block_base_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
+
+    <io.bcaas.view.tv.FlyBroadLayout
+        android:id="@+id/block_base_mainup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@mipmap/tv_block_select"
+        android:visibility="gone" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/d16"
-        android:orientation="horizontal">
+        style="@style/tv_layout_bg"
+        android:orientation="vertical">
+
+        <include layout="@layout/tv_include_header" />
 
         <LinearLayout
-            android:layout_width="@dimen/d0"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_marginTop="@dimen/d16"
+            android:orientation="horizontal">
 
             <LinearLayout
-                style="@style/tv_layout_style"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/d0"
+                android:layout_width="@dimen/d0"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="center_vertical"
+                android:gravity="center"
                 android:orientation="vertical">
 
-                <TextView
-                    style="@style/white_20_text_style"
-                    android:text="@string/private_key" />
-
-                <TextView
-                    style="@style/white_18_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/save_private_key_hint" />
-
-                <CheckBox
-                    android:id="@+id/cb_pwd"
-                    android:layout_width="@dimen/d30"
-                    android:layout_height="@dimen/d30"
-                    android:background="@color/transparent"
-                    android:button="@drawable/selector_cb_password"
-                    android:checked="false"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:gravity="center" />
-
-                <TextView
-                    android:id="@+id/tv_private_key"
-                    style="@style/white_14_text_style"
+                <LinearLayout
+                    style="@style/tv_layout_style"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/transparent"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:inputType="textMultiLine"
-                    android:lineSpacingExtra="@dimen/d3"
-                    android:maxHeight="@dimen/d44"
-                    android:maxLines="2"
-                    android:textIsSelectable="true" />
+                    android:layout_height="@dimen/d0"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/white_20_text_style"
+                        android:text="@string/private_key" />
+
+                    <TextView
+                        style="@style/white_18_text_style"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/save_private_key_hint" />
+
+                    <CheckBox
+                        android:id="@+id/cb_pwd"
+                        android:layout_width="@dimen/d30"
+                        android:layout_height="@dimen/d30"
+                        android:background="@color/transparent"
+                        android:button="@drawable/selector_cb_password"
+                        android:checked="false"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:gravity="center" />
+
+                    <TextView
+                        android:id="@+id/tv_private_key"
+                        style="@style/white_14_text_style"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/transparent"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:inputType="textMultiLine"
+                        android:lineSpacingExtra="@dimen/d3"
+                        android:maxHeight="@dimen/d44"
+                        android:maxLines="2"
+                        android:textIsSelectable="true" />
 
 
+                </LinearLayout>
+
+                <TextView
+                    style="@style/white_24_text_style"
+                    android:layout_marginTop="@dimen/d16"
+                    android:text="@string/wallet_info" />
             </LinearLayout>
 
-            <TextView
-                style="@style/white_24_text_style"
-                android:layout_marginTop="@dimen/d16"
-                android:text="@string/wallet_info" />
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="@dimen/d0"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/d162"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="@dimen/d0"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/d162"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                style="@style/tv_layout_style"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/d0"
-                android:layout_weight="1">
-
-                <TextView
-                    android:id="@+id/tv_my_address_key"
-                    style="@style/white_18_text_style"
-                    android:layout_marginTop="@dimen/d20"
-                    android:text="@string/my_account_address"
-                    android:textSize="@dimen/text_size_14" />
-
-                <TextView
-                    android:id="@+id/tv_account_address"
-                    style="@style/white_18_text_style"
-                    android:layout_below="@+id/tv_my_address_key"
-                    android:layout_marginTop="@dimen/d16"
-                    android:lineSpacingExtra="@dimen/d3"
-                    android:maxHeight="@dimen/d44"
-                    android:maxLines="2" />
-
-
-                <TextView
-                    android:id="@+id/tv_title"
-                    style="@style/white_18_text_style"
-                    android:layout_alignParentLeft="true"
-                    android:layout_below="@+id/tv_account_address"
-                    android:layout_marginTop="@dimen/d20"
-                    android:text="@string/authorized_representative_address"
-                    android:textSize="@dimen/text_size_14" />
-
-
-                <EditText
-                    android:id="@+id/et_input_representatives"
-                    style="@style/white_18_text_style"
+                <RelativeLayout
+                    style="@style/tv_layout_style"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_title"
-                    android:layout_centerVertical="true"
-                    android:layout_marginBottom="@dimen/d16"
+                    android:layout_height="@dimen/d0"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/tv_my_address_key"
+                        style="@style/white_18_text_style"
+                        android:layout_marginTop="@dimen/d20"
+                        android:text="@string/my_account_address"
+                        android:textSize="@dimen/text_size_14" />
+
+                    <TextView
+                        android:id="@+id/tv_account_address"
+                        style="@style/white_18_text_style"
+                        android:layout_below="@+id/tv_my_address_key"
+                        android:layout_marginTop="@dimen/d16"
+                        android:lineSpacingExtra="@dimen/d3"
+                        android:maxHeight="@dimen/d44"
+                        android:maxLines="2" />
+
+
+                    <TextView
+                        android:id="@+id/tv_title"
+                        style="@style/white_18_text_style"
+                        android:layout_alignParentLeft="true"
+                        android:layout_below="@+id/tv_account_address"
+                        android:layout_marginTop="@dimen/d20"
+                        android:text="@string/authorized_representative_address"
+                        android:textSize="@dimen/text_size_14" />
+
+
+                    <EditText
+                        android:id="@+id/et_input_representatives"
+                        style="@style/white_18_text_style"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_title"
+                        android:layout_centerVertical="true"
+                        android:layout_marginBottom="@dimen/d16"
+                        android:layout_marginTop="@dimen/d16"
+                        android:background="@color/transparent"
+                        android:cursorVisible="true"
+                        android:digits="@string/private_format"
+                        android:hint="@string/enter_address_of_the_authorized" />
+
+
+                    <Button
+                        android:id="@+id/btn_sure"
+                        style="@style/tv_button_style"
+                        android:layout_below="@+id/et_input_representatives"
+                        android:text="@string/confirm" />
+
+                </RelativeLayout>
+
+                <TextView
+                    style="@style/white_24_text_style"
                     android:layout_marginTop="@dimen/d16"
-                    android:background="@color/transparent"
-                    android:cursorVisible="true"
-                    android:digits="@string/private_format"
-                    android:hint="@string/enter_address_of_the_authorized" />
-
-
-                <Button
-                    android:id="@+id/btn_sure"
-                    style="@style/tv_button_style"
-                    android:layout_below="@+id/et_input_representatives"
-                    android:text="@string/confirm" />
-
-            </RelativeLayout>
-
-            <TextView
-                style="@style/white_24_text_style"
-                android:layout_marginTop="@dimen/d16"
-                android:text="@string/change_representatives" />
+                    android:text="@string/change_representatives" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</io.bcaas.view.tv.MainUpLayout>
