--- a/app/src/main/res/layout-land/tv_include_account_info.xml
+++ b/app/src/main/res/layout-land/tv_include_account_info.xml
@@ -26,8 +26,9 @@
 
     <TextView
         android:id="@+id/tv_currency"
+        style="@style/white_12_text_style"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/d30"
+        android:layout_height="@dimen/d40"
         android:layout_alignBottom="@+id/tv_currency_key"
         android:layout_gravity="center"
         android:layout_marginLeft="@dimen/d10"
