--- a/app/src/main/res/layout/item_pop_currency_list.xml
+++ b/app/src/main/res/layout/item_pop_currency_list.xml
@@ -2,6 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/d40"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:layout_gravity="center">
 
     <TextView
