--- a/app/src/main/res/drawable/tv_bcaas_button_f.xml
+++ b/app/src/main/res/drawable/tv_bcaas_button_f.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle">
 
     <!-- android:radius 弧形的半径 -->
-    <corners android:radius="@dimen/d6" />
-    <stroke
-        android:width="@dimen/d1"
-        android:color="@color/white" />
+    <corners android:radius="@dimen/d4" />
+    <!--<stroke-->
+    <!--android:width="@dimen/d1"-->
+    <!--android:color="@color/black50_1d2124" />-->
 
     <gradient
         android:angle="180"
