--- a/app/src/main/res/layout-land/tv_activity_home.xml
+++ b/app/src/main/res/layout-land/tv_activity_home.xml
@@ -91,11 +91,11 @@
                     <TextView
                         android:id="@+id/tv_loading_more"
                         android:layout_width="wrap_content"
-                        android:layout_height="@dimen/d30"
+                        android:layout_height="@dimen/d40"
                         android:layout_alignParentBottom="true"
                         android:layout_centerHorizontal="true"
                         android:layout_marginBottom="@dimen/d5"
-                        android:background="@drawable/tv_button_selector"
+                        android:background="@color/transparent"
                         android:clickable="true"
                         android:focusable="true"
                         android:focusableInTouchMode="true"
