--- a/app/src/main/res/layout-land/tv_include_header.xml
+++ b/app/src/main/res/layout-land/tv_include_header.xml
@@ -18,8 +18,8 @@
         style="@style/white_24_text_style"
         android:layout_height="@dimen/d40"
         android:layout_centerInParent="true"
+        android:background="@color/transparent"
         android:focusable="true"
-        android:background="@drawable/tv_button_selector"
         android:focusableInTouchMode="true"
         android:gravity="center"
         android:padding="@dimen/d5"
@@ -41,10 +41,11 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/d60"
-        android:background="@drawable/tv_button_selector"
+        android:background="@color/transparent"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
+        android:gravity="center"
         android:paddingLeft="@dimen/d10"
         android:paddingRight="@dimen/d10"
         android:text="@string/logout" />
