--- a/app/src/main/res/layout/popwindow_show_list.xml
+++ b/app/src/main/res/layout/popwindow_show_list.xml
@@ -20,6 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:scrollbars="none"
             tools:listitem="@layout/item_pop_currency_list" />
     </LinearLayout>
