--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -309,7 +309,7 @@
     <style name="tv_layout_bg">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:background">@color/black80_1d2124</item>
+        <item name="android:background">@drawable/tv_block_bg_layout_d</item>
         <item name="android:paddingTop">@dimen/d30</item>
         <item name="android:paddingBottom">@dimen/d30</item>
         <item name="android:paddingLeft">@dimen/d60</item>
@@ -343,17 +343,26 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/text_size_20</item>
     </style>
+
     <style name="white_18_text_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/text_size_18</item>
     </style>
+
     <style name="white_12_text_style" parent="marquee_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">@dimen/text_size_14</item>
+        <item name="android:textSize">@dimen/text_size_12</item>
+    </style>
+
+    <style name="white_10_text_style" parent="marquee_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_10</item>
     </style>
 
     <style name="tv_layout_style">
